[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/hub_town/HubTown.gd" id="1_hub"]
[ext_resource type="Script" path="res://scenes/hub_town/Player.gd" id="2_player"]
[ext_resource type="Script" path="res://scenes/hub_town/NPC.gd" id="3_npc"]
[ext_resource type="Script" path="res://scripts/ui/DialogueBox.gd" id="4_dialogue"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="5_hud"]

[node name="HubTown" type="Node2D"]
script = ExtResource("1_hub")

[node name="Background" type="ColorRect" parent="."]
offset_left = -640.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = 400.0
color = Color(0.76, 0.7, 0.55, 1)

[node name="DockArea" type="ColorRect" parent="."]
offset_left = 100.0
offset_top = 150.0
offset_right = 500.0
offset_bottom = 350.0
color = Color(0.55, 0.35, 0.2, 1)

[node name="WaterArea" type="ColorRect" parent="."]
offset_left = 100.0
offset_top = 350.0
offset_right = 640.0
offset_bottom = 500.0
color = Color(0.1, 0.4, 0.65, 1)

[node name="BuildingLeft" type="ColorRect" parent="."]
offset_left = -400.0
offset_top = -200.0
offset_right = -300.0
offset_bottom = -100.0
color = Color(0.85, 0.35, 0.25, 1)

[node name="BuildingRight" type="ColorRect" parent="."]
offset_left = 300.0
offset_top = -200.0
offset_right = 420.0
offset_bottom = -80.0
color = Color(0.3, 0.6, 0.4, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(0, 50)
collision_layer = 2
collision_mask = 1
script = ExtResource("2_player")

[node name="Sprite2D" type="Sprite2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="FishMonger" type="Node2D" parent="."]
position = Vector2(-150, -50)
script = ExtResource("3_npc")
npc_name = "Old Tanaka"
npc_type = "fishmonger"

[node name="Sprite2D" type="Sprite2D" parent="FishMonger"]

[node name="InteractArea" type="Area2D" parent="FishMonger"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishMonger/InteractArea"]

[node name="UpgradeNPC" type="Node2D" parent="."]
position = Vector2(150, -100)
script = ExtResource("3_npc")
npc_name = "Captain Higa"
npc_type = "upgrade"

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNPC"]

[node name="InteractArea" type="Area2D" parent="UpgradeNPC"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeNPC/InteractArea"]

[node name="FlavorNPC" type="Node2D" parent="."]
position = Vector2(-200, 100)
script = ExtResource("3_npc")
npc_name = "Grandma Yoshi"
npc_type = "generic"
dialogue_lines = Array[String](["The sea is generous today.", "My grandson used to catch the biggest tuna!", "Be careful in the deep waters, child."])

[node name="Sprite2D" type="Sprite2D" parent="FlavorNPC"]

[node name="InteractArea" type="Area2D" parent="FlavorNPC"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlavorNPC/InteractArea"]

[node name="DockExit" type="Area2D" parent="."]
position = Vector2(350, 300)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DockExit"]

[node name="ExitMarker" type="ColorRect" parent="DockExit"]
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
color = Color(0.2, 0.6, 0.9, 0.5)

[node name="ExitLabel" type="Label" parent="DockExit"]
offset_left = -40.0
offset_top = -35.0
offset_right = 40.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 10
text = "To Sea >"
horizontal_alignment = 1

[node name="Boundaries" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="DialogueBox" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("4_dialogue")

[node name="Panel" type="PanelContainer" parent="DialogueBox"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -150.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="DialogueBox/Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="DialogueBox/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
text = "NPC Name"

[node name="TextLabel" type="Label" parent="DialogueBox/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Dialogue text here..."
autowrap_mode = 2

[node name="ContinueLabel" type="Label" parent="DialogueBox/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "[E] Continue"
horizontal_alignment = 2

[node name="HUD" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource("5_hud")

[node name="TopBar" type="HBoxContainer" parent="HUD"]
offset_left = 10.0
offset_right = 1270.0
offset_bottom = 35.0

[node name="LocationLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Location"

[node name="GoldLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
text = "50g"
horizontal_alignment = 2

[node name="InteractPrompt" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -100.0
offset_top = 330.0
offset_right = 100.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 1, 1, 0.9)
text = "[E] Interact"
horizontal_alignment = 1
